--- a/index.qmd
+++ b/index.qmd
@@ -1,5 +1,18 @@
 ---
 title: "Emily Mitchell"
+about: 
+  template: jolla
+  image-shape: rectangle
+  image-width: 10em
+  links: 
+    - text: LinkedIn
+      href: //https://www.linkedin.com/in/emilymitchell8
+    - text: Email
+      href: //ekmitch@colostate.edu
+    - text: Github
+      href: //https://github.com/emilymitchell8
 ---
 
-This is my website!
+![](images/1ECC5E3D-8234-4D75-AF06-FCC40EDC5E7F_1_105_c.jpeg)
+
+Hello! My name is Emily Mitchell, and I am studying Ecosystem Science and Sustainability with a minor in Watershed Science at Colorado State University. I hope to develop a career in environmental science with a concentration in water quality and water management. I grew up in Northwest Montana and enjoy spending time outside hiking, camping, and skiiing. I also enjoy crafting, baking, and rollerblading.
