--- a/index.qmd
+++ b/index.qmd
@@ -6,6 +6,8 @@ about:
   image-width: 10em
 ---
 
+[LinkedIn](https://www.linkedin.com/in/emilymitchell8) [Email](mailto:ekmitch@colostate.edu) [GitHub](https://github.com/emilymitchell8)
+
 Hello! My name is Emily Mitchell, and I am studying Ecosystem Science and Sustainability with a minor in Watershed Science at Colorado State University. I hope to develop a career in environmental science with a concentration in water quality and water management. I grew up in Northwest Montana and enjoy spending time outside hiking, camping, and skiing. I also enjoy baking, crafting, and rollerblading.
 
 ![](images/EmilyMitchell.jpeg){fig-align="center" width="312"}
